--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
 		<title>!!VEGGIE BURGER TAST TEST TRACKER!!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burgerbuttons.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	</head>
 	<body>
