--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,8 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
-    background-color:  rgba(146, 241, 142, 0.753);
+    /* background-color:  rgba(146, 241, 142, 0.753); */
+    background-image: url("../img/burgertemplate.png");
   }
   
   .burger-Display {
@@ -13,6 +14,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    font-family: cursive;
+    font-style: italic;
   }
 
   .munched-burger {
@@ -51,3 +54,4 @@ body {
     color: transparent;
     background: transparent;
   }
+
