--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container space">
     <div class="row">
       <div class="col-md-5 sideTitle">
         <h2>Veggie Burgers I Have not Tried</h2>
