--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
             <form class="create-form">
             <div class="form-group">
                 <label for="bni">Burger Desc:</label>
-                <input type="text" id="burgerNinput" name="newBurger">
+                <input style="width: 90%;" type="text" id="burgerNinput" name="newBurger">
             </div>
             <button type="submit">Add Burger</button>
             </form>
